added html outline/skeleton code with comments and some CSS for sidebar

--- a/index.html
+++ b/index.html
@@ -10,17 +10,36 @@
 <body>
     <!--Sidebar with navigation menu-->
     <nav class="sidebar">
-        <h3>CHARLOTTE MURPHEY</h3>
-        <a href="#portfolio">PORTFOLIO</a>
-        <a href="#about-me">ABOUT ME</a>
-        <a href="#contact-info">CONTACT</a>
+        <h3 class="name">CHARLOTTE<br>MURPHEY</h3>
+        <a class="sidetags" href="#portfolio">PORTFOLIO</a>
+        <a class="sidetags" href="#about-me">ABOUT ME</a>
+        <a class="sidetags" href="#contact-info">CONTACT</a>
     </nav>
+
+    <div class="content">
 
     <!--Portfolio Images and Links-->
 
+    <div class="portfolio" id="portfolio">
+        <h4>PORTFOLIO IMAGES HERE</h4>
+    </div>
+
     <!--About Me Section-->
+    <div class = "about-me" id = "about-me">
+        <h4>About Me</h4>
+        <p>stuff and stuff</p>
+    </div>
 
     <!--Contact Information-->
+
+    <div class="contact-info" id="contact-info">
+        <h4>Contact Info</h4>
+        <a href="mailto:murphey.charlotte@gmail.com">Email</a>
+        <a href="https://github.com/cmurphgarv">Github</a>
+        <a href="www.linkedin.com/in/charlotte-murphey-b6b95942">LinkedIn</a>
+    </div>
+
+    </div>
     
 </body>
 
