Added grid layout for portfolio, finished contact info formatting, added about me image

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
     <!--Portfolio Images and Links-->
 
     <div class="portfolio" id="portfolio">
-        <h4>PORTFOLIO IMAGES HERE</h4>
+        <img class="portfolio-images" id="app-1" src="./assets/images/surf1.jpg" alt="Ocean Wave">
+        <img class="portfolio-images" src="./assets/images/ledWall.jpg" alt="LED Wall of lights">
+        <img class="portfolio-images" src="./assets/images/calculator.jpg" alt="Calculator on a Table">
+        <img class="portfolio-images" src="./assets/images/puzzle.jpg" alt="Puzzle Piece Art in Pastels">
+        <img class="portfolio-images" src="./assets/images/run2.jpg" alt="Open Road in Sunlight">
     </div>
 
     <!--About Me Section-->
     <div class = "about-me" id = "about-me">
         <h4>About Me</h4>
+        <img id="about-me-pic" src="./assets/images/aboutMeImg.png" alt="Picture of Charlotte Murphey">
         <p>stuff and stuff</p>
     </div>
 
@@ -34,9 +39,22 @@
 
     <div class="contact-info" id="contact-info">
         <h4>Contact Info</h4>
-        <a href="mailto:murphey.charlotte@gmail.com">Email</a>
-        <a href="https://github.com/cmurphgarv">Github</a>
-        <a href="www.linkedin.com/in/charlotte-murphey-b6b95942">LinkedIn</a>
+        <div class="contact-links">
+            <div class="logo-position">
+                <img class="logos" src="./assets/images/email.png" alt="Email Clip Art">
+                <a href="mailto:murphey.charlotte@gmail.com">Email</a>
+            </div>
+            <div class="logo-position">
+                <img class="logos" src="./assets/images/github-logo.png" alt="Github Logo">
+                <a href="https://github.com/cmurphgarv">Github</a>
+            </div>
+            <div class="logo-position">
+                <img class="logos" src="./assets/images/linkedIn.png" alt="LinkedIn Logo">
+                <a href="www.linkedin.com/in/charlotte-murphey-b6b95942">LinkedIn</a>
+            </div>
+            
+        </div>
+        
     </div>
 
     </div>
