created variables for styles to consolidate code

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="logo-position">
                 <img class="logos" src="./assets/images/linkedIn.png" alt="LinkedIn Logo">
-                <a href="www.linkedin.com/in/charlotte-murphey-b6b95942">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/charlotte-murphey-b6b95942">LinkedIn</a>
             </div>
             
         </div>
