--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <!--Portfolio Images and Links-->
 
     <div class="portfolio" id="portfolio">
-        <img class="portfolio-images" id="app-1" src="./assets/images/surf1.jpg" alt="Ocean Wave">
-        <img class="portfolio-images" src="./assets/images/ledWall.jpg" alt="LED Wall of lights">
-        <img class="portfolio-images" src="./assets/images/calculator.jpg" alt="Calculator on a Table">
-        <img class="portfolio-images" src="./assets/images/puzzle.jpg" alt="Puzzle Piece Art in Pastels">
-        <img class="portfolio-images" src="./assets/images/run2.jpg" alt="Open Road in Sunlight">
+        <img src="./assets/images/surf1.jpg" alt="Ocean Wave"/>
+        <img src="./assets/images/ledWall.jpg" alt="LED Wall of lights"/>
+        <img src="./assets/images/calculator.jpg" alt="Calculator on a Table"/>
+        <img src="./assets/images/puzzle.jpg" alt="Puzzle Piece Art in Pastels"/>
+        <img src="./assets/images/run2.jpg" alt="Open Road in Sunlight"/>
     </div>
 
     <!--About Me Section-->
@@ -46,11 +46,11 @@
             </div>
             <div class="logo-position">
                 <img class="logos" src="./assets/images/github-logo.png" alt="Github Logo">
-                <a href="https://github.com/cmurphgarv">Github</a>
+                <a href="https://github.com/cmurphgarv" target="_blank">Github</a>
             </div>
             <div class="logo-position">
                 <img class="logos" src="./assets/images/linkedIn.png" alt="LinkedIn Logo">
-                <a href="https://www.linkedin.com/in/charlotte-murphey-b6b95942">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/charlotte-murphey-b6b95942" target="_blank">LinkedIn</a>
             </div>
             
         </div>
