portfolio images sized correctly in flexbox

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     <!--Portfolio Images and Links-->
 
     <div class="portfolio" id="portfolio">
+        <div class="port-img-text">Surf Report</div>
         <img src="./assets/images/surf1.jpg" alt="Ocean Wave"/>
+        <div class="port-img-text">LED Wall</div>
         <img src="./assets/images/ledWall.jpg" alt="LED Wall of lights"/>
+        <div class="port-img-text">Calculator</div>
         <img src="./assets/images/calculator.jpg" alt="Calculator on a Table"/>
+        <div class="port-img-text">Pastel Puzzles</div>
         <img src="./assets/images/puzzle.jpg" alt="Puzzle Piece Art in Pastels"/>
+        <div class="port-img-text">Running Buddy</div>
         <img src="./assets/images/run2.jpg" alt="Open Road in Sunlight"/>
     </div>
 
