finalized styles for responsive design and image titles

--- a/index.html
+++ b/index.html
@@ -16,16 +16,33 @@
         <a class="sidetags" href="#contact-info">CONTACT</a>
     </nav>
 
+    <header class="hideNav">
+        <span class="name">CHARLOTTE MURPHEY</span>
+        <a class="sidetags" href="#portfolio">PORTFOLIO</a>
+        <a class="sidetags" href="#about-me">ABOUT ME</a>
+        <a class="sidetags" href="#contact-info">CONTACT</a>
+      </header>
+
     <div class="content">
 
     <!--Portfolio Images and Links-->
 
     <div class="portfolio" id="portfolio">
-            <img src="./assets/images/surf2.jpg" alt="Ocean Wave"/>
-            <img src="./assets/images/led2.jpg" alt="LED string of lights"/>
-            <img src="./assets/images/calculator.jpg" alt="Calculator on a Table"/>
-            <img src="./assets/images/puzzle.jpg" alt="Puzzle Piece Art in Pastels"/>
-            <img src="./assets/images/run3.jpg" alt="Sneaker Running Clipart"/>
+        <div class="images">
+            <img src="./assets/images/surf2.jpg" alt="Ocean Wave"/><div class="caption">SURF REPORT</div>
+        </div>
+        <div class="images">
+            <img src="./assets/images/led2.jpg" alt="LED string of lights"/><div class="caption">LED WALL</div>
+        </div>
+        <div class="images">
+            <img src="./assets/images/calculator.jpg" alt="Calculator on a Table"/><div class="caption">CALCULATOR</div>
+        </div>
+        <div class="images">
+            <img src="./assets/images/puzzle.jpg" alt="Puzzle Piece Art in Pastels"/><div class="caption">PASTEL PUZZLES</div>
+        </div>
+        <div class="images"> 
+            <img src="./assets/images/run3.jpg" alt="Sneaker Running Clipart"/><div class="caption">RUNNING BUDDY</div>
+        </div>
         
     </div>
 
@@ -33,13 +50,14 @@
     <div class = "about-me" id = "about-me">
         <h4>About Me</h4>
         <img id="about-me-pic" src="./assets/images/aboutMeImg.png" alt="Picture of Charlotte Murphey">
-        <p>stuff and stuff</p>
+        <p>After completing my masters degree in Counseling at the College of William and Mary, I spent the next several years working as a clinician in various capacities before transitioning into research with the intention of going back to school for my PhD. However, I had come to realize during this period that I wasn't happy in the field of psychology and, in 2017, I was in a position to quit my job and explore alternatives. Through shadowing other professionals, taking classes, and online research I eventually discovered a love for programming. It came as quite a surprise to me because I had never considered it before, but my passion only grew as I took classes in computer science at IUPUI. When the pandemic hit in 2020, I had been applying for new degrees, but the job I had at the time was disrupted by the pandemic and I had to focus on earning money for a while. Once I resumed practicing as a clinician online to earn a steady income, I was able to look at my options for starting over in programming and chose Butler's Coding Bootcamp so I could begin my new career as soon as possible while still receiving excellent training. I cannot wait to finish earning my certificate and begin working full-time as a developer, and look forward to further opportunities to learn and build on my new craft as a programmer.
+        </p>
     </div>
 
     <!--Contact Information-->
 
     <div class="contact-info" id="contact-info">
-        <h4>Contact Info</h4>
+        <h4>Contact</h4>
         <div class="contact-links">
             <div class="logo-position">
                 <img class="logos" src="./assets/images/email.png" alt="Email Clip Art">
