--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="portfolio" id="portfolio">
         <div class="images">
-            <a href="https://terryboufis.github.io/Dine-and-Wine-App/" target="_blank"><img src="./assets/images/dineNwine.webp" alt="Image of Restaraunt"/></a><div class="caption">DINE AND WINE</div>
+            <a href="https://terryboufis.github.io/Dine-and-Wine-App/" target="_blank"><img src="./assets/images/dineNwine.png" alt="Image of Restaraunt"/></a><div class="caption">DINE AND WINE</div>
         </div>
         <div class="images">
             <img src="./assets/images/led2.jpg" alt="LED string of lights"/><div class="caption">LED WALL</div>
